--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+.elixir_ls/build/test/lib/certifi/mix.rebar.config
+.elixir_ls/*
